added personal styles

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,7 +7,7 @@
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         <nav>
             <li>
@@ -18,11 +18,12 @@
             </li>
         </nav>
         <h1>Donnelly Zhou</h1>
-        <p> Aspiring Full stack Webdev | Javascript | Python | Django | React.js | "A Man of God who Codes!"</p>
+        
     </header>
     <section id="Introduction">
         <h2>Introduction</h2>
-        <p>An Aspiring Full-Stack Developer with a Passion for Innovation <br>
+        <p> <br>Aspiring Full stack Webdev | Javascript | Python | Django | React.js | "A Man of God who Codes!"</p>
+        <p> <br>An Aspiring Full-Stack Developer with a Passion for Innovation <br>
 <br>
 Driven by a profound passion for technology and an unwavering commitment to personal growth, I am an aspiring full-stack developer currently immersed in the rigorous Software Engineering program with ALX. My journey into the world of code is anchored in a solid foundation of Python (Django) for robust backend development and JavaScript (React.js) for dynamic and engaging front-end experiences.
 <br>
