--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+            <img src="images/logo.png" alt="logo">
           
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -33,7 +33,7 @@
                 <h2>Learn from the pros</h2>
                 <div>
                     <div>
-                        <img src="./images/1 (3).png" alt="">
+                        <img src="./images/1.png" alt="">
                         <h3>Phillip Massey</h3>
                         <p>« Smile of the year » 2018 - 2019</p>
                     </div>
@@ -198,7 +198,7 @@
     <footer>
         <section>
             <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
